--- a/FileArchiver/FileArchiver.vcxproj
+++ b/FileArchiver/FileArchiver.vcxproj
@@ -143,6 +143,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Hash.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Hash.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
