--- a/FileArchiver/FileArchiver.vcxproj
+++ b/FileArchiver/FileArchiver.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="Hash.h" />
     <ClInclude Include="HashTable.h" />
     <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="Node.h" />
     <ClInclude Include="Queue.h" />
   </ItemGroup>
   <ItemGroup>
