--- a/FileArchiver/FileArchiver.vcxproj.filters
+++ b/FileArchiver/FileArchiver.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Queue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Node.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Hash.cpp">
